<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp">
	
	<ImageView
		android:id="@+id/img_movie"
		android:layout_width="100dp"
		android:layout_height="150dp"
		android:scaleType="fitXY" />
	
	<TextView
		android:id="@+id/tv_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_toEndOf="@id/img_movie"
		android:text="@string/title"
		android:textSize="12sp"
		android:textStyle="bold" />
	
	<TextView
		android:id="@+id/tv_release"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tv_title"
		android:layout_marginStart="26dp"
		android:layout_marginTop="15dp"
		android:layout_toRightOf="@id/img_movie"
		android:ellipsize="end"
		android:maxLines="1"
		android:text="@string/release"
		android:textStyle="italic"
		android:textSize="10sp"/>
	
	<TextView
		android:id="@+id/tv_producer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tv_release"
		android:layout_marginStart="26dp"
		android:layout_marginTop="15dp"
		android:layout_toRightOf="@id/img_movie"
		android:ellipsize="end"
		android:maxLines="1"
		android:text="@string/release"
		android:textStyle="italic"
		android:textSize="10sp"/>
	
	<TextView
		android:id="@+id/tv_genre"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tv_producer"
		android:layout_marginStart="26dp"
		android:layout_marginTop="15dp"
		android:layout_toRightOf="@id/img_movie"
		android:ellipsize="end"
		android:maxLines="1"
		android:text="@string/genre"
		android:textSize="10sp"/>
	
	
	<TextView
		android:id="@+id/tv_description"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tv_genre"
		android:layout_marginStart="26dp"
		android:layout_marginTop="10dp"
		android:ellipsize="end"
		android:maxLines="3"
		android:layout_toRightOf="@id/img_movie"
		android:text="@string/description"/>

</RelativeLayout>