<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".DetailActivity">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_margin="10dp">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_margin="10dp">
			
			<ImageView
				android:layout_width="150dp"
				android:layout_height="200dp"
				android:id="@+id/img_movie"
				android:scaleType="fitXY"
				android:src="@color/grey"
				android:layout_margin="10dp"/>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_marginTop="15dp">
				
				<TextView
					android:id="@+id/tv_title"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/title"
					android:textSize="18sp"
					android:textStyle="bold"/>
				
				<View
					android:layout_width="match_parent"
					android:layout_height="3dp"
					android:layout_weight="1"
					android:background="@color/grey"/>
				
				<View
					android:layout_width="match_parent"
					android:layout_height="3dp"
					android:layout_weight="1"
					android:background="@color/grey"/>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:layout_marginTop="25dp">
					
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="Release: "/>
					
					<TextView
						android:id="@+id/tv_release"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/release"
						android:textStyle="italic"
						android:textSize="15sp"/>
				
				</LinearLayout>
				
				<View
					android:layout_width="match_parent"
					android:layout_height="3dp"
					android:layout_weight="1"
					android:background="@color/grey"/>
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:layout_marginTop="25dp">
					
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="Producer: "/>
					
					<TextView
						android:id="@+id/tv_producer"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/producer"
						android:textSize="15sp"/>
				</LinearLayout>
				
				<View
					android:layout_width="match_parent"
					android:layout_height="3dp"
					android:layout_weight="1"
					android:background="@color/grey"/>
			</LinearLayout>
		</LinearLayout>
		
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="Genre"
			android:background="@color/grey"
			android:textAlignment="center"
			android:textSize="18sp"
			/>
		
		<TextView
			android:id="@+id/tv_genre"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/genre"
			android:textAlignment="center"
			android:textSize="15sp"
			android:layout_marginTop="10dp"/>
		
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="Overview"
			android:textAlignment="center"
			android:layout_marginTop="10dp"
			android:background="@color/grey"
			android:textSize="18sp"/>
		
		<TextView
			android:id="@+id/tv_description"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="10dp"
			android:text="@string/description"
			android:textAlignment="center"
			android:textSize="15sp" />
	</LinearLayout>

</ScrollView>